typescript/checker/tests/conformance/types/primitives/undefined/directReferenceToUndefined.ts.stderr
error: NameNotFound {
    sym: Ident(
        Ident {
            span: Span {
                lo: BytePos(
                    7,
                ),
                hi: BytePos(
                    16,
                ),
                ctxt: #0,
            },
            sym: Atom('Undefined' type=dynamic),
            type_ann: None,
            optional: false,
        },
    ),
    span: Span {
        lo: BytePos(
            7,
        ),
        hi: BytePos(
            16,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/primitives/undefined/directReferenceToUndefined.ts:1:8
  |
1 | var x: Undefined;
  |        ^^^^^^^^^

